fix height and width, fixed elements intersection by adding minimum width, changed modules sizes to look better and fit the window size. more minor changings, fonts etc

--- a/app/components/ApBarDashboard/ApBarDashboard.scss
+++ b/app/components/ApBarDashboard/ApBarDashboard.scss
@@ -31,6 +31,8 @@
   }
   .buttonAppBar {
     color: #fff;
+    font-size: 18px;
+    font-family: Helvetica;
   }
   .buttonAppBar:hover {
     background:  rgba(0, 238, 122, 0.3);
