minor fix in typing

--- a/app/components/Registration/Registration.scss
+++ b/app/components/Registration/Registration.scss
@@ -27,7 +27,7 @@
     background: #1B5E20;
     width: 200px;
     height: 60px;
-  }teamviewer --daemon
+  }
   .RegistrationMain {
     height: 800px;
     background: #131416;
