--- a/src/components/Registration/Registration.scss
+++ b/src/components/Registration/Registration.scss
@@ -22,7 +22,7 @@
     }
     .buttonExit {
         position: absolute;
-        right: 70px;
+        left: 70px;
         bottom: 40px;
         width: 190px;
         height: 40px;
@@ -34,7 +34,7 @@
         background: #1b5e20;
         position: absolute;
         bottom: 100px;
-        right: 70px;
+        left: 70px;
         width: 190px;
         height: 40px;
         font-family: Arial;
