--- a/src/components/Leaderboard/Leaderboard.scss
+++ b/src/components/Leaderboard/Leaderboard.scss
@@ -6,6 +6,7 @@ h4 {
 .leaderboard-container {
     display: flex;
     justify-content: space-around;
+    height: 35rem;
     width: 100%;
     padding: 40px 0;
     background: rgba(0, 0, 0, 0.699);
@@ -15,21 +16,14 @@ h4 {
         border: 1px solid red;
         height: 100%;
         width: 60%;
-        padding: 20px 0;
+        padding: 20px 20px 5px;
 
-        & div {
-            display: flex;
-            justify-content: space-around;
-            height: 70px;
+        & > .table-data {
+            width: 100%;
+            overflow-y: scroll;
 
-            & span {
-                width: 20%;
-                overflow-x: scroll;
-                text-align: center;
-
-                &::-webkit-scrollbar {
-                    display: none;
-                }
+            &::-webkit-scrollbar-thumb {
+                background: #04522c;
             }
         }
     }
