--- a/src/components/Tracker/index.scss
+++ b/src/components/Tracker/index.scss
@@ -7,16 +7,16 @@
     color: #e2e0e0;
     font-size: 11pt;
     background-color: #212322;
+    border-radius: 5px;
     text-align: center;
 
     & form {
         display: inline-block;
 
         & input {
-            display: block;
             border: none;
             border-bottom: 1px solid white;
-            display: block;
+            width: 51%;
             margin-top: 20%;
             background: transparent;
             color: white;
@@ -91,8 +91,4 @@ button {
 
         transition: width 0.1s ease-out, padding-top 0.1s ease-out;
     }
-}
-
-#exit {
-    display: none;
 }
