--- a/src/main-style.scss
+++ b/src/main-style.scss
@@ -1,3 +1,5 @@
+@import './theme/palette.scss';
+
 * {
     box-sizing: border-box;
 }
@@ -9,9 +11,10 @@ body {
     color: white;
     max-width: 100%;
     height: 100vh;
-    background-image: url('./assets/Materials/loginBG.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: $secondaryGreen;
+    // background-image: url('./assets/Materials/loginBG.jpg');
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-size: cover;
     font-family: Arial, Helvetica, Helvetica Neue, serif;
 }
