[update] registration + login screens

--- a/src/components/Tracker/index.scss
+++ b/src/components/Tracker/index.scss
@@ -63,32 +63,32 @@ button {
         background-color: #27ae60;
     }
 
-    &:before {
-        content: '';
+    // &:before {
+    //     content: '';
 
-        position: absolute;
-        top: 50%;
-        left: 50%;
+    //     position: absolute;
+    //     top: 50%;
+    //     left: 50%;
 
-        display: block;
-        width: 0;
-        padding-top: 0;
+    //     display: block;
+    //     width: 0;
+    //     padding-top: 0;
 
-        border-radius: 100%;
+    //     border-radius: 100%;
 
-        background-color: rgba(236, 240, 241, 0.3);
+    //     background-color: rgba(236, 240, 241, 0.3);
 
-        -webkit-transform: translate(-50%, -50%);
-        -moz-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        -o-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-    }
+    //     -webkit-transform: translate(-50%, -50%);
+    //     -moz-transform: translate(-50%, -50%);
+    //     -ms-transform: translate(-50%, -50%);
+    //     -o-transform: translate(-50%, -50%);
+    //     transform: translate(-50%, -50%);
+    // }
 
-    &:active:before {
-        width: 120%;
-        padding-top: 120%;
+    // &:active:before {
+    //     width: 120%;
+    //     padding-top: 120%;
 
-        transition: width 0.1s ease-out, padding-top 0.1s ease-out;
-    }
+    //     transition: width 0.1s ease-out, padding-top 0.1s ease-out;
+    // }
 }
