--- a/src/main-style.scss
+++ b/src/main-style.scss
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    outline: none;
 }
 
 body {
@@ -11,7 +12,7 @@ body {
     color: white;
     max-width: 100%;
     height: 100vh;
-    background: $secondaryGreen;
+    background: $primaryGrey;
     // background-image: url('./assets/Materials/loginBG.jpg');
     // background-position: center;
     // background-repeat: no-repeat;
