--- a/src/components/Login/styles.module.scss
+++ b/src/components/Login/styles.module.scss
@@ -1,93 +1,85 @@
 @import '../../theme/palette.scss';
+.img {
+    position: absolute;
+    left: 50%;
+    top: 15%;
+    transform: translate(-50%, -50%) scale(0.15);
+}
 
-.container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    background: transparent;
+.loginForm {
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%, -50%);
 
-    & img {
-        position: absolute;
-        left: 50%;
-        top: 30%;
-        transform: translate(-50%, -50%) scale(0.15);
-    }
+    width: 70%;
 
-    & .loginForm {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-
-        width: 25%;
-        height: 15rem;
-
-        & input {
-            position: relative;
-            top: 25%;
-            transform: translate(0, -50%);
-            display: block;
-            width: 80%;
-            margin: 10px 10%;
-            height: 2.5rem;
-            border: 1px solid $secondaryGreen;
-            color: $primaryGreen;
-            font-size: 1.1rem;
-            border-radius: 3px;
-            padding: 0 10px;
-            background: transparent;
-
-            &:focus {
-                border: 1px solid $primaryGreen;
-            }
-
-            &[type='submit'] {
-                background: $secondaryGreen;
-                color: #000;
-                cursor: pointer;
-                transition: all 0.3s;
-                font-size: 1rem;
-
-                &:hover {
-                    background: $primaryGreen;
-                }
-            }
-        }
-    }
-
-    & .forgotPassButton {
-        position: absolute;
-        left: 50%;
-        top: 58%;
-        transform: translate(-50%, -50%);
-        height: 1rem;
-        padding: 0;
-        box-shadow: none;
-
-        background: transparent;
-        cursor: pointer;
-        color: $secondaryGreen;
-
-        &:hover {
-            color: $primaryGreen;
-        }
-    }
-
-    & .registrationButton {
-        position: absolute;
-        left: 50%;
-        top: 70%;
-        transform: translate(-50%, -50%);
+    & input {
+        position: relative;
+        top: 25%;
+        transform: translate(0, -50%);
+        display: block;
+        width: 100%;
+        margin: 10px auto;
+        height: 2.5rem;
+        border: 1px solid $secondaryGreen;
+        color: $primaryGreen;
+        font-size: 1.1rem;
         border-radius: 3px;
-        width: 20%;
-        background: $secondaryGreen;
-        cursor: pointer;
-        color: #000;
+        padding: 0 10px;
+        background: transparent;
 
-        &:hover {
-            background: $primaryGreen;
+        &:focus {
+            border: 1px solid $primaryGreen;
         }
+
+        &[type='submit'] {
+            background: $secondaryGreen;
+            color: #000;
+            cursor: pointer;
+            transition: all 0.3s;
+            font-size: 1rem;
+
+            &:hover {
+                background: $primaryGreen;
+            }
+        }
+    }
+}
+
+.forgotPassButton {
+    position: absolute;
+    left: 50%;
+    top: 56%;
+    transform: translate(-50%, -50%);
+    height: 1rem;
+    padding: 0;
+    box-shadow: none;
+
+    background: transparent;
+    cursor: pointer;
+    color: $secondaryGreen;
+
+    transition: all .2s;
+
+    &:hover {
+        color: $primaryGreen;
+        background: transparent;
+    }
+}
+
+.registrationButton {
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    transform: translate(-50%, -50%);
+    border-radius: 3px;
+    width: 70%;
+    background: $secondaryGreen;
+    cursor: pointer;
+    color: #000;
+
+    &:hover {
+        background: $primaryGreen;
     }
 }
