--- a/src/components/Login/styles.module.scss
+++ b/src/components/Login/styles.module.scss
@@ -9,7 +9,7 @@
 .loginForm {
     position: absolute;
     left: 50%;
-    top: 20%;
+    top: 47%;
     transform: translate(-50%, -50%);
 
     width: 70%;
@@ -60,7 +60,7 @@
     cursor: pointer;
     color: $secondaryGreen;
 
-    transition: all .2s;
+    transition: all 0.2s;
 
     &:hover {
         color: $primaryGreen;
