--- a/src/components/Startup/styles.module.scss
+++ b/src/components/Startup/styles.module.scss
@@ -1,7 +1,7 @@
 @import '../../theme/palette.scss';
 
 * {
-    transition: all .2s
+    transition: all 0.2s;
 }
 
 .visible {
@@ -23,6 +23,8 @@
     background: black;
     border: 1px solid $secondaryGreen;
     border-radius: 3px;
+
+    overflow-y: hidden;
 }
 
 .containerRegistration {
@@ -36,4 +38,6 @@
     background: black;
     border: 1px solid $secondaryGreen;
     border-radius: 3px;
+
+    overflow-y: hidden;
 }
