--- a/src/components/Startup/styles.module.scss
+++ b/src/components/Startup/styles.module.scss
@@ -4,14 +4,6 @@
     transition: all 0.2s;
 }
 
-.visible {
-    opacity: 1;
-}
-
-.invisible {
-    opacity: 0;
-}
-
 .container {
     position: absolute;
     left: 50%;
@@ -20,7 +12,7 @@
     width: 35%;
     transform: translate(-50%, -50%);
 
-    background: black;
+    background: rgba(0, 0, 0, 0.7);
     border: 1px solid $secondaryGreen;
     border-radius: 3px;
 
@@ -35,7 +27,7 @@
     width: 35%;
     transform: translate(-50%, -50%);
 
-    background: black;
+    background: rgba(0, 0, 0, 0.7);
     border: 1px solid $secondaryGreen;
     border-radius: 3px;
 
