--- a/src/components/Spinner/styles.module.scss
+++ b/src/components/Spinner/styles.module.scss
@@ -1,6 +1,9 @@
 .loaderInner {
+    position: fixed;
+    left: 50%;
+    top: -25%;
+    transform: translate(-50%, -50%);
     height: 60px;
-    margin: auto;
     width: 100px;
 }
 
