user button update

--- a/src/components/ApBarDashboard/ApBarDashboard.scss
+++ b/src/components/ApBarDashboard/ApBarDashboard.scss
@@ -74,6 +74,10 @@ a {
 }
 
 .dash-user-button {
+    position: absolute;
+    top: 10px;
+    right: 90px;
+
     cursor: pointer;
     display: flex;
     flex-wrap: nowrap;
@@ -83,8 +87,8 @@ a {
     padding: 0.3rem;
     width: 8.5rem;
     height: 3rem;
-    border-radius: 5px;
-    box-shadow: 1px 1px 10px #000;
+    border-radius: 3px;
+    border-bottom: 1px solid $secondaryGreen;
     transition: all 0.3s;
 
     & p {
@@ -98,49 +102,4 @@ a {
         height: 2rem;
         border-radius: 360px;
     }
-
-    &:hover {
-        box-shadow: 1px 2px 10px #000;
-    }
-}
-
-.dash-user-button-active {
-    cursor: pointer;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-    align-items: center;
-    margin-left: 1rem;
-    padding: 0.3rem;
-    width: 8.5rem;
-    height: 3rem;
-    border-radius: 10px 10px 0 0;
-    box-shadow: 3px 4px 10px #000;
-    transition: all 0.3s;
-    background: #212322;
-
-    & p {
-        height: 100%;
-        line-height: 2.2rem;
-        width: 5rem;
-    }
-
-    & img {
-        width: 2rem;
-        height: 2rem;
-        border-radius: 360px;
-    }
-
-    &:hover {
-        box-shadow: 1px 2px 10px #000;
-    }
-}
-
-.buff-tracker {
-    position: fixed;
-    right: 30px;
-    height: 35rem;
-    width: 27rem;
-    border-radius: 5px;
-    z-index: 99999;
 }
