--- a/src/components/Login/styles.module.scss
+++ b/src/components/Login/styles.module.scss
@@ -1,4 +1,5 @@
 @import '../../theme/palette.scss';
+
 .img {
     position: absolute;
     left: 50%;
@@ -66,11 +67,12 @@
 .forgotPassButton {
     position: absolute;
     left: 50%;
-    top: 61%;
+    top: 68%;
     transform: translate(-50%, -50%);
     height: 1rem;
     padding: 0;
     box-shadow: none;
+    border: none;
 
     background: transparent;
     cursor: pointer;
@@ -87,7 +89,8 @@
 .registrationButton {
     position: absolute;
     left: 50%;
-    top: 72%;
+    top: 80%;
+    padding: 0.5rem;
     transform: translate(-50%, -50%);
     border-radius: 3px;
     width: 70%;
