--- a/src/components/MarketPlace/styles.module.scss
+++ b/src/components/MarketPlace/styles.module.scss
@@ -3,6 +3,8 @@
     .dashboardMain {
         padding: 0;
         .comingSoon {
+            position: fixed;
+            bottom: 0;
             height: 500px;
             width: 100%;
 
