--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -15,7 +15,9 @@
         margin-top: 50px;
     }
     & .historyMain {
-        height: 800px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
         background: #131416;
         & .papersMain {
             font-size: 0.9em;
