--- a/src/components/NewsTournaments/styles.module.scss
+++ b/src/components/NewsTournaments/styles.module.scss
@@ -15,12 +15,13 @@
         filter: brightness(70%);
     }
     .newsTournamentsMain {
-        height: 800px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
         background: #131416;
-        overflow: scroll;
         .papersMain {
             font-size: 0.9em;
-            margin: 20px 20px;
+            margin: 40px 20px;
 
             .buttonReadMore {
                 color: #616161;
