--- a/src/components/MarketPlace/styles.module.scss
+++ b/src/components/MarketPlace/styles.module.scss
@@ -9,7 +9,7 @@
             width: 100%;
 
             max-width: 100%;
-            background-image: url('../../assets/comingSoon.png');
+            // background-image: url('../../assets/comingSoon.png');
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
