--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -6,12 +6,9 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    position: relative;
     color: white;
-    max-width: 100%;
-    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
     background: url('../theme/assets/Materials/loginBG.jpg');
     background-size: cover;
     font-family: Arial, Helvetica, Helvetica Neue, serif;
