--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -1,6 +1,9 @@
 @import '../../theme/palette.scss';
 
 .historyComponent {
+    position: absolute;
+    top: 4rem;
+    z-index: 11;
     & .historyTitle {
         margin: 25px 50px;
         font-size: 1.6em;
