--- a/src/components/AppBarDashboard/styles.module.scss
+++ b/src/components/AppBarDashboard/styles.module.scss
@@ -1,10 +1,5 @@
 @import '../../theme/palette.scss';
 
-button,
-a {
-    cursor: pointer;
-}
-
 .appBarDashboardBG {
     width: 100%;
     height: 100%;
@@ -19,26 +14,40 @@ a {
     filter: brightness(25%);
 }
 
+.active {
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    text-transform: uppercase;
+    color: white;
+    font-size: 1rem;
+    padding: 0.8rem 1.6rem;
+    border-bottom: 1.5px solid $primaryGreen;
+}
+
+a {
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    border-bottom: 1.5px solid transparent;
+    text-transform: uppercase;
+    color: white;
+    font-size: 1rem;
+    padding: 0.8rem 1.6rem;
+    text-decoration: none;
+    z-index: 12;
+
+    &:hover {
+        border-bottom: 1.5px solid $secondaryGreen;
+    }
+}
+
 .appBarDashboardMain {
     position: fixed;
     left: 0;
     right: 0;
-    z-index: 9999;
+    z-index: 10;
 
-    .dashboardMenu,
-    .dashboardMenuActive {
-        text-decoration: none;
-        box-shadow: none;
-        margin-left: 2px;
-        .buttonAppBar {
-            color: #fff;
-            box-shadow: none;
-            border-radius: 3px 3px 0 0 !important;
-        }
-    }
-    .dashboardMenuActive {
-        border-bottom: 1.5px solid #00ee7a;
-    }
     .logo {
         width: 120px;
         height: 30px;
