startup page + spinner updates

--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -12,4 +12,5 @@ body {
     background: url('../theme/assets/Materials/loginBG.jpg');
     background-size: cover;
     font-family: Arial, Helvetica, Helvetica Neue, serif;
+    overflow: hidden;
 }
