--- a/src/components/Spinner/styles.module.scss
+++ b/src/components/Spinner/styles.module.scss
@@ -1,10 +1,11 @@
 .loaderInner {
-    position: fixed;
-    left: 50%;
-    top: -25%;
-    transform: translate(-50%, -50%);
-    height: 60px;
-    width: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background: #004624d3;
+    animation: appear 300ms;
 }
 
 .loaderLineWrap {
@@ -12,7 +13,8 @@
     box-sizing: border-box;
     height: 50px;
     position: absolute;
-    top: 50vh;
+    top: calc(50% - 100px);
+    left: calc(50% - 50px);
     overflow: hidden;
     transform-origin: 50% 100%;
     width: 100px;
@@ -83,5 +85,14 @@
     }
     100% {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes appear {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
