--- a/src/components/NewsTournaments/styles.module.scss
+++ b/src/components/NewsTournaments/styles.module.scss
@@ -2,7 +2,7 @@
 
 .newsTournamentsComponent {
     position: absolute;
-    top: 4rem;
+    top: 0;
     z-index: 11;
     .newsTournamentsTitle {
         margin: 25px 50px;
@@ -24,7 +24,7 @@
         background: #131416;
         .papersMain {
             font-size: 0.9em;
-            margin: 40px 20px;
+            margin: 40px 30px;
 
             .buttonReadMore {
                 color: #616161;
