--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -6,6 +6,7 @@
 }
 
 body {
+    padding-left: 4%;
     color: white;
     max-width: 100vw;
     max-height: 100vh;
@@ -13,4 +14,16 @@ body {
     background-size: cover;
     font-family: Arial, Helvetica, Helvetica Neue, serif;
     overflow: hidden;
+
+    ::-webkit-scrollbar {
+        width: 7px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #163751;
+        border-radius: 4px;
+    }
+    ::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
 }
