--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -1,12 +1,14 @@
 @import '../../theme/palette.scss';
 
 .background {
-    width: 100%;
-    height: 100%;
-    z-index: 1;
     position: fixed;
     left: 0;
     top: 0;
+
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+
     background-image: url('../../theme/assets/Materials/Registration_background.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -198,7 +200,7 @@
     padding: 1rem 0;
 
     min-height: 100%;
-    width: 5%;
+    width: 5rem;
 
     & .profileInfo {
         cursor: pointer;
