--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -1,12 +1,14 @@
 @import './palette.scss';
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     outline: none;
 }
 
 body {
-    padding-left: 4%;
+    padding-left: 5rem;
     color: white;
     max-width: 100vw;
     max-height: 100vh;
@@ -16,11 +18,11 @@ body {
     overflow: hidden;
 
     ::-webkit-scrollbar {
-        width: 7px;
+        width: 4px;
     }
 
     ::-webkit-scrollbar-thumb {
-        background: #163751;
+        background: $secondaryGreen;
         border-radius: 4px;
     }
     ::-webkit-scrollbar-track {
