--- a/src/components/Market/styles.module.scss
+++ b/src/components/Market/styles.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 3rem;
+    padding-top: 1rem;
     margin: 1rem;
     z-index: 12;
 
@@ -16,7 +16,6 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            border-bottom: 1px solid grey;
 
             width: 100%;
             height: 2.5rem;
@@ -29,6 +28,7 @@
                 height: 100%;
 
                 & .tabs {
+                    cursor: pointer;
                     display: inline-block;
                     height: 100%;
                     width: 49%;
@@ -37,16 +37,49 @@
                     text-align: center;
                     line-height: 2.5rem;
                     border: 1px solid $lightGrey;
+                    border-radius: 5px 5px 0 0;
+                    border-bottom: none;
+                    filter: brightness(50%);
+                    transition: all 0s;
+                }
+
+                & .active {
+                    height: 101%;
+                    z-index: 14;
+                    filter: brightness(100%);
                 }
             }
 
-            & input {
-                border-radius: 3px;
-                background: transparent;
-                color: $secondaryGreen;
-                padding-left: 1rem;
-                font-size: 1.2rem;
-                border: 1px solid grey;
+            & .searchContainer {
+                display: flex;
+                justify-content: flex-end;
+
+                & input {
+                    border-radius: 5px 0 0 5px;
+                    background: $primaryGrey;
+                    color: $secondaryGreen;
+                    padding-left: 1rem;
+                    font-size: 1.2rem;
+                    border: 1px solid grey;
+                    height: 2.2rem;
+                    width: 40%;
+                    border-right: none;
+
+                    &:focus {
+                        width: 90%;
+                    }
+                }
+
+                & .searchIcon {
+                    width: 5%;
+                    border-radius: 0 5px 5px 0;
+                    background: $primaryGrey;
+                    color: $secondaryGrey;
+                    border: 1px solid grey;
+                    border-left: none;
+                    height: 2.2rem;
+                    padding-right: 0.5rem;
+                }
             }
         }
 
@@ -55,7 +88,7 @@
             height: 85vh;
             background: $primaryGrey;
             border: 1px solid grey;
-            border-top: none;
+            border-radius: 0 0 5px 5px;
             display: flex;
             flex-wrap: wrap;
             overflow-y: scroll;
