--- a/src/components/Market/styles.module.scss
+++ b/src/components/Market/styles.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 2rem;
+    padding-top: 1rem;
     margin: 1rem;
     z-index: 12;
 
@@ -36,7 +36,7 @@
                     color: $lightGrey;
                     text-align: center;
                     line-height: 2.5rem;
-                    border: 1px solid $lightGrey;
+                    border: 1px solid $secondaryGrey;
                     border-radius: 5px 5px 0 0;
                     border-bottom: none;
                     filter: brightness(50%);
@@ -86,9 +86,9 @@
         & .marketTab {
             padding-top: 1rem;
             width: 100%;
-            height: 80vh;
+            height: 87vh;
             background: $primaryGrey;
-            border: 1px solid grey;
+            border: 1px solid $secondaryGrey;
             border-radius: 0 0 5px 5px;
             display: flex;
             flex-wrap: wrap;
