--- a/src/components/MarketItem/styles.module.scss
+++ b/src/components/MarketItem/styles.module.scss
@@ -7,107 +7,87 @@
     flex-wrap: nowrap;
     justify-content: space-between;
 
-    height: 4%;
+    height: 46%;
     width: 21%;
     margin: 0.7rem 2%;
-    background-image: url('https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6577/6577073_sa.jpg;maxHeight=640;maxWidth=550');
-    background-size: cover;
-    background-position: center;
-    border-radius: 20px;
-    border: 1px solid $secondaryGreen;
+    background: $paletteColor2_2;
+    border-radius: 10px;
+    border: 1px solid $lightGrey;
     animation: appear 500ms;
+    padding-bottom: 0.6rem;
 
     //? hack to get rid of border bug in chromium
     transform: scale(1.01);
 
-    & .title {
-        cursor: pointer;
-        height: 3rem;
-        background: black;
-        text-align: center;
-        line-height: 3rem;
-        border-radius: 20px 20px 0 0;
+    & .titleContainer {
+        width: 100%;
+        padding: 0.5rem 1rem;
+        margin-bottom: -0.5rem;
 
-        & .description {
-            display: none;
-            animation: appear 300ms;
+        & .title {
+            font-size: 0.9rem;
         }
+
+        & .category {
+            font-size: 0.7rem;
+            color: goldenrod;
+        }
+    }
+
+    & img {
+        width: 100%;
+        height: 50%;
+    }
+
+    & .label {
+        position: fixed;
+        left: 65%;
+        top: 60%;
+        background: red;
+        width: 25%;
+        font-size: 0.8rem;
+        line-height: 1.2rem;
+        text-align: center;
+        padding: 0.2rem 0.3rem;
+    }
+
+    & .priceContainer {
+        width: 100%;
+        height: 3rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 1rem;
+
+        & p {
+            font-size: 1.3rem;
+
+            &::before {
+                content: '₿';
+                color: $primaryGreen;
+                filter: brightness(85%);
+            }
+        }
+
+        & img {
+            width: 25%;
+            filter: invert(1);
+        }
+    }
+
+    & button {
+        width: 90%;
+        margin: -0.5rem auto 0;
+        background: $secondaryGreen;
+        border: none;
+        border-radius: 5px;
+        color: #fff;
+        height: 2rem;
+        cursor: pointer;
 
         &:hover {
-            height: 9rem;
-
-            & .description {
-                display: block;
-                text-align: justify;
-                width: 90%;
-                margin: 1rem auto;
-                font-size: 0.8rem;
-                line-height: 0.8rem;
-                animation: appear 300ms;
-            }
-        }
-    }
-
-    & .actionButtonContainerBuy {
-        width: 100.5%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: space-around;
-        height: 3rem;
-        border-radius: 0 0 20px 20px;
-        border: 1px solid $secondaryGreen;
-        background: $primaryGrey;
-
-        & p {
-            width: 30%;
-            height: 100%;
-            text-align: center;
-            line-height: 3rem;
-
-            &:last-of-type {
-                width: 70%;
-                background: $secondaryGreen;
-                color: white;
-                border-radius: 0 0 20px 0;
-                cursor: pointer;
-
-                &:hover {
-                    background: $primaryGreen;
-                    color: black;
-                }
-            }
-        }
-    }
-
-    & .actionButtonContainerSell {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        flex-wrap: nowrap;
-        height: 3rem;
-        border-radius: 0 0 20px 20px;
-        border: 1px solid $secondaryGreen;
-        background: $primaryGrey;
-
-        & p {
-            width: 30%;
-            height: 100%;
-            text-align: center;
-            line-height: 3rem;
-
-            &:last-of-type {
-                width: 70%;
-                background: #4e77e6;
-                color: white;
-                border-radius: 0 0 20px 0;
-                cursor: pointer;
-
-                &:hover {
-                    background: #6e8ee7;
-                    color: black;
-                }
-            }
+            background: $primaryGreen;
+            color: #000;
         }
     }
 }
