--- a/src/components/_marketPopups/Buy/styles.module.scss
+++ b/src/components/_marketPopups/Buy/styles.module.scss
@@ -4,10 +4,10 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: #000000cc;
-    z-index: 15;
+    width: 100%;
+    height: 100%;
+    background: #000000d0;
+    z-index: 14;
 
     & .container {
         position: absolute;
@@ -21,7 +21,7 @@
         border-radius: 5px;
 
         //? box shadow
-        animation: animateShadow 2000ms infinite;
+        animation: animateShadow 3000ms infinite;
 
         & .title {
             height: 4rem;
@@ -58,13 +58,13 @@
                 width: 50%;
                 height: 3rem;
                 line-height: 3rem;
-                font-size: 2rem;
+                font-size: 1.5rem;
                 padding: 0 3rem;
                 font-weight: 700;
 
                 &::before {
                     content: '₿';
-                    font-size: 2rem;
+                    font-size: 1.5rem;
                     color: $primaryGreen;
                     font-weight: 100;
                 }
@@ -74,7 +74,7 @@
                 width: 50%;
                 height: 3rem;
                 line-height: 3rem;
-                font-size: 2rem;
+                font-size: 1.5rem;
                 padding: 0 3rem;
                 color: $lightGrey;
             }
@@ -82,14 +82,15 @@
 
         & .buttonContainer {
             display: flex;
-            justify-content: space-around;
-            width: 100%;
-            height: 4rem;
+            justify-content: space-between;
+            width: 85%;
+            height: 3rem;
+            margin: 1rem auto;
 
             & div {
-                height: 3rem;
-                line-height: 3rem;
-                font-size: 1.5rem;
+                height: 2.5rem;
+                line-height: 2.5rem;
+                font-size: 1rem;
                 border-radius: 5px;
                 text-align: center;
                 cursor: pointer;
@@ -122,7 +123,7 @@
         box-shadow: 0px 0px 80px 0px $secondaryGreen;
     }
     50% {
-        box-shadow: 0px 0px 150px 0px $secondaryGreen;
+        box-shadow: 0px 0px 100px 0px $secondaryGreen;
     }
     100% {
         box-shadow: 0px 0px 80px 0px $secondaryGreen;
