--- a/src/components/MarketItem/styles.module.scss
+++ b/src/components/MarketItem/styles.module.scss
@@ -13,7 +13,7 @@
     background: $paletteColor2_2;
     border-radius: 10px;
     border: 1px solid $lightGrey;
-    animation: appear 500ms;
+    animation: appear 300ms;
     padding-bottom: 0.6rem;
 
     //? hack to get rid of border bug in chromium
@@ -23,6 +23,7 @@
         width: 100%;
         padding: 0.5rem 1rem;
         margin-bottom: -0.5rem;
+        cursor: pointer;
 
         & .title {
             font-size: 0.9rem;
@@ -35,6 +36,7 @@
     }
 
     & img {
+        cursor: pointer;
         width: 100%;
         height: 50%;
     }
