--- a/src/components/_marketPopups/Buy/styles.module.scss
+++ b/src/components/_marketPopups/Buy/styles.module.scss
@@ -8,6 +8,7 @@
     height: 100%;
     background: #000000d0;
     z-index: 14;
+    animation: appear 300ms;
 
     & .container {
         position: absolute;
@@ -22,6 +23,7 @@
 
         //? box shadow
         animation: animateShadow 3000ms infinite;
+        animation: appear 800ms;
 
         & .title {
             height: 4rem;
@@ -127,5 +129,14 @@
     }
     100% {
         box-shadow: 0px 0px 80px 0px $secondaryGreen;
+    }
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
