--- a/src/components/_popups/market/Activation/styles.module.scss
+++ b/src/components/_popups/market/Activation/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../theme/palette.scss';
+@import '../../../../theme/palette.scss';
 
 .bg {
     position: fixed;
@@ -15,18 +15,46 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        height: 20%;
-        width: 25%;
+        height: 85%;
+        width: 30%;
         background: $primaryGrey;
         border: 2px solid $secondaryGreen;
         border-radius: 5px;
+        box-shadow: 0px 0px 100px 0px $secondaryGreen;
 
         //? box shadow
         animation: animateShadow 3000ms infinite;
         animation: appear 800ms;
 
-        & p {
-            margin: 0.5rem 1rem 0;
+        & .title {
+            height: 4rem;
+            line-height: 4rem;
+            font-size: 1.8rem;
+            color: $secondaryGreen;
+            padding: 0 2rem;
+        }
+
+        & img {
+            width: 100%;
+            height: 40%;
+        }
+
+        & .description {
+            font-size: 1rem;
+            line-height: 1.5rem;
+            width: 90%;
+            height: 9rem;
+            margin: 0.3rem auto;
+            overflow-y: scroll;
+        }
+
+        & .code {
+            font-size: 1rem;
+            line-height: 1.5rem;
+            width: 90%;
+            height: 9rem;
+            margin: 0.3rem auto;
+            text-align: center;
         }
 
         & .buttonContainer {
@@ -34,14 +62,15 @@
             justify-content: space-between;
             width: 85%;
             height: 3rem;
-            margin: 0.5rem auto;
+            margin: 3rem auto;
 
-            & div {
+            & button {
                 height: 2.5rem;
                 line-height: 2.5rem;
                 font-size: 1rem;
                 border-radius: 5px;
                 text-align: center;
+                border: none;
                 cursor: pointer;
             }
 
@@ -49,6 +78,7 @@
                 border: 1px solid $lightGrey;
                 color: $lightGrey;
                 width: 30%;
+                background: none;
 
                 &:hover {
                     filter: brightness(120%);
@@ -58,24 +88,19 @@
             & .buyButton {
                 width: 60%;
                 background: $secondaryGreen;
+                color: #fff;
 
                 &:hover {
                     background: $primaryGreen;
                 }
+
+                &:disabled {
+                    border: 1px solid $lightGrey;
+                    color: $lightGrey;
+                    background: none;
+                }
             }
         }
-    }
-}
-
-@keyframes animateShadow {
-    0% {
-        box-shadow: 0px 0px 80px 0px $secondaryGreen;
-    }
-    50% {
-        box-shadow: 0px 0px 100px 0px $secondaryGreen;
-    }
-    100% {
-        box-shadow: 0px 0px 80px 0px $secondaryGreen;
     }
 }
 
