--- a/src/components/_popups/market/Buy/styles.module.scss
+++ b/src/components/_popups/market/Buy/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../theme/palette.scss';
+@import '../../../../theme/palette.scss';
 
 .bg {
     position: fixed;
@@ -20,7 +20,6 @@
         background: $primaryGrey;
         border: 2px solid $secondaryGreen;
         border-radius: 5px;
-        box-shadow: 0px 0px 100px 0px $secondaryGreen;
 
         //? box shadow
         animation: animateShadow 3000ms infinite;
@@ -48,13 +47,39 @@
             overflow-y: scroll;
         }
 
-        & .code {
-            font-size: 1rem;
-            line-height: 1.5rem;
-            width: 90%;
-            height: 9rem;
-            margin: 0.3rem auto;
-            text-align: center;
+        & .numbersContainer {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 100%;
+            height: 4rem;
+            border-top: 1px solid $secondaryGrey;
+            margin: 0.2rem 0;
+
+            & .price {
+                width: 50%;
+                height: 3rem;
+                line-height: 3rem;
+                font-size: 1.5rem;
+                padding: 0 3rem;
+                font-weight: 700;
+
+                &::before {
+                    content: '₿';
+                    font-size: 1.5rem;
+                    color: $primaryGreen;
+                    font-weight: 100;
+                }
+            }
+
+            & .amount {
+                width: 50%;
+                height: 3rem;
+                line-height: 3rem;
+                font-size: 1.5rem;
+                padding: 0 3rem;
+                color: $lightGrey;
+            }
         }
 
         & .buttonContainer {
@@ -62,15 +87,14 @@
             justify-content: space-between;
             width: 85%;
             height: 3rem;
-            margin: 3rem auto;
+            margin: 1rem auto;
 
-            & button {
+            & div {
                 height: 2.5rem;
                 line-height: 2.5rem;
                 font-size: 1rem;
                 border-radius: 5px;
                 text-align: center;
-                border: none;
                 cursor: pointer;
             }
 
@@ -78,7 +102,6 @@
                 border: 1px solid $lightGrey;
                 color: $lightGrey;
                 width: 30%;
-                background: none;
 
                 &:hover {
                     filter: brightness(120%);
@@ -88,19 +111,24 @@
             & .buyButton {
                 width: 60%;
                 background: $secondaryGreen;
-                color: #fff;
 
                 &:hover {
                     background: $primaryGreen;
                 }
-
-                &:disabled {
-                    border: 1px solid $lightGrey;
-                    color: $lightGrey;
-                    background: none;
-                }
             }
         }
+    }
+}
+
+@keyframes animateShadow {
+    0% {
+        box-shadow: 0px 0px 80px 0px $secondaryGreen;
+    }
+    50% {
+        box-shadow: 0px 0px 100px 0px $secondaryGreen;
+    }
+    100% {
+        box-shadow: 0px 0px 80px 0px $secondaryGreen;
     }
 }
 
