--- a/src/components/_popups/market/Confirmation/styles.module.scss
+++ b/src/components/_popups/market/Confirmation/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../theme/palette.scss';
+@import '../../../../theme/palette.scss';
 
 .bg {
     position: fixed;
@@ -15,8 +15,8 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        height: 85%;
-        width: 30%;
+        height: 20%;
+        width: 25%;
         background: $primaryGrey;
         border: 2px solid $secondaryGreen;
         border-radius: 5px;
@@ -25,61 +25,8 @@
         animation: animateShadow 3000ms infinite;
         animation: appear 800ms;
 
-        & .title {
-            height: 4rem;
-            line-height: 4rem;
-            font-size: 1.8rem;
-            color: $secondaryGreen;
-            padding: 0 2rem;
-        }
-
-        & img {
-            width: 100%;
-            height: 40%;
-        }
-
-        & .description {
-            font-size: 1rem;
-            line-height: 1.5rem;
-            width: 90%;
-            height: 9rem;
-            margin: 0.3rem auto;
-            overflow-y: scroll;
-        }
-
-        & .numbersContainer {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 100%;
-            height: 4rem;
-            border-top: 1px solid $secondaryGrey;
-            margin: 0.2rem 0;
-
-            & .price {
-                width: 50%;
-                height: 3rem;
-                line-height: 3rem;
-                font-size: 1.5rem;
-                padding: 0 3rem;
-                font-weight: 700;
-
-                &::before {
-                    content: '₿';
-                    font-size: 1.5rem;
-                    color: $primaryGreen;
-                    font-weight: 100;
-                }
-            }
-
-            & .amount {
-                width: 50%;
-                height: 3rem;
-                line-height: 3rem;
-                font-size: 1.5rem;
-                padding: 0 3rem;
-                color: $lightGrey;
-            }
+        & p {
+            margin: 0.5rem 1rem 0;
         }
 
         & .buttonContainer {
@@ -87,7 +34,7 @@
             justify-content: space-between;
             width: 85%;
             height: 3rem;
-            margin: 1rem auto;
+            margin: 0.5rem auto;
 
             & div {
                 height: 2.5rem;
