--- a/src/components/MarketInstruments/styles.module.scss
+++ b/src/components/MarketInstruments/styles.module.scss
@@ -76,24 +76,23 @@
                 }
 
                 & .inputsContainer {
-                    display: flex;
+                    display: block;
                     opacity: 1;
-                    flex-direction: row;
-                    width: 100%;
-                    align-items: center;
-                    justify-content: flex-start;
 
                     & label {
                         font-size: 1rem;
                         color: $secondaryGreen;
                         white-space: nowrap;
+                        display: inline-block;
+                        line-height: 1rem;
                     }
 
                     & input[type='checkbox'] {
+                        width: 5%;
                         cursor: pointer;
                         transition: all 0.3s;
                         display: inline-block;
-                        margin: 0 0.5rem;
+                        margin: 0.5rem;
                     }
 
                     & input[type='text'] {
