search + filters by game finished

--- a/src/components/MarketInstruments/styles.module.scss
+++ b/src/components/MarketInstruments/styles.module.scss
@@ -86,7 +86,7 @@
                         line-height: 1rem;
                     }
 
-                    & input[type='checkbox'] {
+                    & input[type='radio'] {
                         width: 5%;
                         cursor: pointer;
                         transition: all 0.3s;
