--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -30,7 +30,7 @@
     padding: 1rem 0;
 
     min-height: 100%;
-    width: 20%;
+    width: 23%;
 
     & .profileInfo {
         cursor: pointer;
@@ -55,7 +55,7 @@
             height: 100%;
             display: flex;
             flex-direction: column;
-            margin-left: -2rem;
+            margin-left: -1rem;
 
             & p {
                 font-size: 1rem;
@@ -76,6 +76,7 @@
 
         & .balance {
             height: 100%;
+            max-width: 8rem;
             display: flex;
             flex-direction: column;
             border: 1px solid #ffffff80;
