--- a/src/components/MarketInstruments/styles.module.scss
+++ b/src/components/MarketInstruments/styles.module.scss
@@ -104,7 +104,7 @@
                         font-size: 1rem;
                         width: 20%;
                         text-align: center;
-                        margin: 0 7.6rem;
+                        margin: 0 5.6rem;
                     }
 
                     & input[type='range'] {
@@ -140,7 +140,7 @@
 
         margin: 2rem auto;
 
-        background-image: url('https://i.kym-cdn.com/photos/images/original/000/326/426/506.jpg');
+        background-image: url('../../theme/assets/banner.jpg');
         background-position: center;
         background-size: cover;
         border-radius: 5px;
